# springboot_python

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_02_20_1650-d9a6ed2c9e62_init_database.py  2025_02_20_1733-b8060a8cd847_add_book_table.py
src/springboot_python/: cli.py  controller.py  db.py  keycloak_config.py  main.py  settings.py
src/springboot_python/api/v1/: __init__.py  book.py  student.py
src/springboot_python/daos/: base.py  book.py  student.py
src/springboot_python/exceptions/: __init__.py  base.py  book.py  cli.py  student.py
src/springboot_python/functions/: route_require_admin.py
src/springboot_python/models/: __init__.py  book.py  student.py
src/springboot_python/schemas/: book.py  page.py  student.py
src/springboot_python/services/: auth.py  book.py  student.py
